# ZPlugin_offsetMaster

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  main.cpp  vcpkg.json
ZPlugs64/: ZOffset_Master_2022.txt  ZOffset_Master_2022.zsc  offsetMaster_2022.txt  offsetMaster_2022.zsc
ZPlugs64/ZOffset_Master_2022/: resampleWithMarchingCubes.lib
ZPlugs64/ZOffset_Master_2022/lang/: ZOffset_Master_2022_en.xml  ZOffset_Master_2022_jp.xml
ZPlugs64/offsetMaster_2022/lang/: offsetMaster_2022_en.xml  offsetMaster_2022_jp.xml
plugin/: CMakeLists.txt
plugin/include/: readGoZAndTriangulate.h  resample.h  resampleWithMarchingCubes.h
plugin/src/: readGoZAndTriangulate.cpp  resample.cpp  resampleWithMarchingCubes.cpp
